# agentic-ecommerce

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/fba_advisor/: __init__.py  config.py
backend/tests/: test_backend_settings.py
backend/tests/connectors/: test_connectors.py
backend/tests/repositories/: test_sqlalchemy_repositories.py
backend/tests/services/: test_business_services.py
database/: README.md
docker/: README.md
docs/: ADR.md  AI_ENGINEERING_GUIDE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  architecture.md  connectors.md  n8n-workflows.md
docs/features/: dashboard.md  negotiation.md  product_hunter.md  scoring_engine.md  supplier_search.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/__tests__/: mcp-client.test.ts  score.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: dashboard.ts
mcp-server/: README.md  config.py  server.py
mcp-server/prompts/: product_research.md
mcp-server/src/fba_mcp_server/: __init__.py  config.py  server.py
mcp-server/tests/: test_mcp_settings.py  test_tools.py
migrations/: env.py
migrations/versions/: 20260701_0001_create_persistence_entities.py
prompts/: ai_scoring.v1.md  brandability.v1.md  competition_analysis.v1.md  differentiation.v1.md  review_analysis.v1.md  summary.v1.md
workflows/n8n/: daily-amazon-research.json  product-supplier-research.json
(+86 files in other folders)
