[project]
name = "agentic-ecommerce"
version = "0.1.0"
description = "Private agentic decision-support platform for Amazon FBA."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
  "black>=24.8",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "ruff>=0.6.8",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["backend/src", "mcp-server/src"]

[tool.ruff.lint]
select = ["A", "B", "C4", "D", "E", "F", "I", "N", "UP", "W"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D100", "D103"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["backend/src", "mcp-server/src"]
packages = ["fba_advisor", "fba_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "mcp-server/tests"]
pythonpath = ["backend/src", "mcp-server/src"]
addopts = "--strict-markers --strict-config"
